--- a/app/src/main/res/layout/fragment_inquiry_write.xml
+++ b/app/src/main/res/layout/fragment_inquiry_write.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:hint="제목을 입력해 주세요"
+            android:hint="제목을 입력해 주세요"
             app:hintEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -73,7 +73,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
-            app:hint="내용을 입력해주세요."
+            android:hint="내용을 입력해주세요."
             app:hintEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
