--- a/app/src/main/res/layout/activity_apt_schedule.xml
+++ b/app/src/main/res/layout/activity_apt_schedule.xml
@@ -53,13 +53,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/imageViewGas"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut1" />
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/textAptGas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -74,13 +74,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageViewDisinfection"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut2" />
 
                 <TextView
-                    android:id="@+id/voteTextView1"
+                    android:id="@+id/textAptDisinfection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -101,13 +101,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/imageViewElevator"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut3" />
 
                 <TextView
-                    android:id="@+id/voteTextView2"
+                    android:id="@+id/textElevator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -122,13 +122,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageAptMarketPlace"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut4" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textMarketPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -149,13 +149,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/imageAptTrash"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut5" />
 
                 <TextView
-                    android:id="@+id/voteTextView3"
+                    android:id="@+id/textAptTrash"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -170,13 +170,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/imageAptAdministration"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_donut6" />
 
                 <TextView
-                    android:id="@+id/voteTextView4"
+                    android:id="@+id/textAdministration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
