--- a/app/src/main/res/layout/fragment_apt_schedule_show_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_apt_schedule_show_bottom_sheet.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewAptBottom"
             android:layout_width="60dp"
             android:layout_height="30dp"
             android:layout_weight="1"
