--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -100,6 +100,7 @@
                         android:layout_width="55dp"
                         android:layout_height="55dp"
                         android:layout_gravity="center|end"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:src="@drawable/icon_next" />
                 </LinearLayout>
@@ -185,7 +186,7 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/textExtra"
@@ -193,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosans_bold"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:text="추가 기능"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -203,10 +204,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:gravity="start|center_vertical"
                 android:text="방문 주차 예약"
-                android:textSize="16sp"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_person"
                 app:iconTint="@color/black" />
 
@@ -248,7 +250,7 @@
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/notosans_bold"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:text="아파트"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -258,10 +260,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="관리사무소 문의"
-                android:textSize="16sp"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_management_office"
                 app:iconTint="@color/black" />
 
