--- a/app/src/main/res/layout/fragment_user_info_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_user_info_bottom_sheet_dialog.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/userInfoBottomtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
@@ -17,7 +17,7 @@
         android:paddingBottom="8dp"/>
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/userInfoBottomContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12dp"
