--- a/app/src/main/res/layout/row_broadcast.xml
+++ b/app/src/main/res/layout/row_broadcast.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginTop="5dp"
         android:text="text"
-        android:textColor="@color/lightGray"
+        android:textColor="@color/gray"
         android:textSize="14sp"
         android:fontFamily="@font/notosans_regular"
         android:includeFontPadding="false"/>
