--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -563,7 +563,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="전체보기"
-                            android:textColor="@color/lightGray"
+                            android:textColor="@color/gray"
                             android:textSize="12sp"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/notosans_regular"
