--- a/app/src/main/res/layout/activity_detail_facility.xml
+++ b/app/src/main/res/layout/activity_detail_facility.xml
@@ -131,9 +131,13 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:backgroundTint="#73C0B0"
-            android:text="예약하기"
             android:fontFamily="@font/notosans_semibold"
             android:includeFontPadding="false"
-            android:textColor="@color/black" />
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="예약하기"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:cornerRadius="10dp" />
     </LinearLayout>
 </LinearLayout>
