--- a/app/src/main/res/layout/activity_fac_reservation.xml
+++ b/app/src/main/res/layout/activity_fac_reservation.xml
@@ -224,8 +224,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:backgroundTint="#73C0B0"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:text="예약하기"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:cornerRadius="10dp" />
         </LinearLayout>
 
     </LinearLayout>
