--- a/app/src/main/res/layout/fragment_community_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_community_bottom_sheet.xml
@@ -24,7 +24,7 @@
         android:background="@color/lightGray" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonCommunityDetailModify"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="406dp"
@@ -37,7 +37,8 @@
         android:text="수정하기"
         android:textColor="@color/third"
         android:textSize="18sp"
-        app:cornerRadius="0dp" />
+        app:cornerRadius="0dp"
+        app:rippleColor="@color/third"/>
 
     <View
         android:id="@+id/divider10"
@@ -46,7 +47,7 @@
         android:layout_gravity="center_horizontal"
 
         android:background="@color/lightGray" />
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonCommunityDetailDelete"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="406dp"
@@ -59,7 +60,8 @@
         android:text="삭제하기"
         android:textColor="@color/sixth"
         android:textSize="18sp"
-        app:cornerRadius="0dp" />
+        app:cornerRadius="0dp"
+        app:rippleColor="@color/third"/>
 
     <View
         android:id="@+id/divider11"
