#57 [fix] 커뮤니티, 안내방송 리플 색 변경 커뮤니티, 안내방송 리플 색 fourth

--- a/app/src/main/res/layout/fragment_community_add.xml
+++ b/app/src/main/res/layout/fragment_community_add.xml
@@ -215,7 +215,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCommunityAddContent"
                     app:strokeColor="@color/third"
-                    app:strokeWidth="1dp" />
+                    app:strokeWidth="1dp"
+                    app:rippleColor="@color/fourth"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
