--- a/app/src/main/res/layout/dialog_confirm_cancel.xml
+++ b/app/src/main/res/layout/dialog_confirm_cancel.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/notosans_bold"
         android:includeFontPadding="false"
         android:text="취소"
@@ -73,6 +74,7 @@
         android:textSize="16sp"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonDialogConfirmCancelConfirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDialogConfirmCancelContent"
         app:strokeColor="@color/third" />
