--- a/app/src/main/res/layout/dialog_confirm_cancel.xml
+++ b/app/src/main/res/layout/dialog_confirm_cancel.xml
@@ -40,43 +40,69 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewDialogConfirmCancelSubject" />
 
-    <Button
-        android:id="@+id/buttonDialogConfirmCancelConfirm"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/notosans_bold"
-        android:includeFontPadding="false"
-        android:text="확인"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/third"
-        app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDialogConfirmCancelContent" />
-
-    <Button
-        android:id="@+id/buttonDialogConfirmCancelCancel"
-        style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        android:fontFamily="@font/notosans_bold"
-        android:includeFontPadding="false"
-        android:text="취소"
-        android:textColor="@color/third"
-        android:textSize="16sp"
-        app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonDialogConfirmCancelConfirm"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/textViewDialogConfirmCancelContent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDialogConfirmCancelContent"
-        app:strokeColor="@color/third" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="20dp">
+
+            <Button
+                android:id="@+id/buttonDialogConfirmCancelCancel"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintWidth="0.8"
+                android:fontFamily="@font/notosans_bold"
+                android:includeFontPadding="false"
+                android:text="취소"
+                android:textColor="@color/third"
+                android:textSize="16sp"
+                app:cornerRadius="10dp"
+                app:strokeColor="@color/third"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/buttonDialogConfirmCancelConfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintWidth="0.8"
+                android:fontFamily="@font/notosans_bold"
+                android:includeFontPadding="false"
+                android:text="확인"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/third"
+                app:cornerRadius="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
