#57 [fix] 다이얼로그 버튼 색 변경 [확인] : 검은색 [확인], [취소] : 흰색

--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -54,6 +54,7 @@
         android:includeFontPadding="false"
         android:text="확인"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:backgroundTint="@color/third"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
