--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -195,6 +195,7 @@
                 android:fontFamily="@font/notosans_bold"
                 android:paddingLeft="20dp"
                 android:paddingTop="20dp"
+                android:layout_marginTop="10dp"
                 android:text="추가 기능"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -244,6 +245,8 @@
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="8dp" />
 
             <TextView
@@ -314,6 +317,30 @@
                 app:rippleColor="@color/fourth"
                 app:iconTint="@color/black" />
 
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp" />
+
+            <Button
+                android:id="@+id/buttonUserLogout"
+                style="@style/Widget.Material3.Button.TextButton.Icon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="start|center_horizontal"
+                android:text="로그아웃"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:rippleColor="@color/fourth"
+                app:icon="@drawable/icon_logout"
+                app:iconTint="@color/black" />
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
@@ -326,6 +353,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
+                    android:paddingLeft="10dp"
                     android:src="@drawable/image_aparttalk" />
 
                 <LinearLayout
