--- a/app/src/main/res/layout/fragment_broadcast_detail.xml
+++ b/app/src/main/res/layout/fragment_broadcast_detail.xml
@@ -72,7 +72,7 @@
         android:layout_marginBottom="25dp"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/third"
-        android:fontFamily="@font/notosans_bold"
+        android:fontFamily="@font/notosans_semibold"
         android:includeFontPadding="false"
         android:insetTop="0dp"
         android:insetBottom="0dp"
