#59 [Fix] 소방점검 화면 수정 @drawable/icon_navigate_next 아이콘 변경

--- a/app/src/main/res/layout/fragment_fire_check_main.xml
+++ b/app/src/main/res/layout/fragment_fire_check_main.xml
@@ -174,7 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_weight="5"
-                    android:drawableRight="@drawable/icon_forward"
+                    android:drawableRight="@drawable/icon_navigate_next"
                     android:fontFamily="@font/notosans_semibold"
                     android:text=" APARTTALK 가 알려주는 절차와 함께 점검 시작하기"
                     android:textAlignment="center"
