--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,16 +24,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
-        android:paddingTop="10dp"
         android:paddingBottom="20dp">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/googleLoginButton"
             style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="5dp"
             app:strokeColor="#8E8E8E"
@@ -53,7 +53,6 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:backgroundTint="@android:color/transparent"
-                    android:padding="11dp"
                     android:src="@drawable/google" />
 
                 <TextView
@@ -63,7 +62,7 @@
                     android:gravity="center"
                     android:text="구글 로그인"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -77,7 +76,7 @@
             android:id="@+id/kakaoLoginButton"
             style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginTop="15dp"
             app:cardBackgroundColor="#FCDB3F"
             app:cardCornerRadius="5dp">
@@ -96,7 +95,6 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:backgroundTint="@android:color/transparent"
-                    android:padding="7dp"
                     android:src="@drawable/kakao_login" />
 
                 <TextView
@@ -106,7 +104,7 @@
                     android:gravity="center"
                     android:text="카카오 로그인"
                     android:textColor="#3A2929"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -119,7 +117,7 @@
             android:id="@+id/naverLoginButton"
             style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginTop="15dp"
             app:cardBackgroundColor="#03C65A"
             app:cardCornerRadius="5dp">
@@ -138,7 +136,6 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:backgroundTint="@android:color/transparent"
-                    android:padding="4dp"
                     android:src="@drawable/naverlogin" />
 
                 <TextView
@@ -148,7 +145,7 @@
                     android:gravity="center"
                     android:text="네이버 로그인"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -188,7 +185,7 @@
             android:id="@+id/phoneNumberLoginButton"
             style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginTop="25dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="5dp"
@@ -209,9 +206,8 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:backgroundTint="@android:color/transparent"
-                    android:paddingHorizontal="10dp"
-                    android:paddingTop="13dp"
-                    android:paddingBottom="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="3dp"
                     android:src="@drawable/icon_phone_android" />
 
                 <TextView
@@ -221,7 +217,7 @@
                     android:gravity="center"
                     android:text="휴대폰 로그인"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
