--- a/app/src/main/res/layout/fragment_login2.xml
+++ b/app/src/main/res/layout/fragment_login2.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="20dp"
         android:paddingHorizontal="20dp">
@@ -66,7 +67,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 app:cardBackgroundColor="@color/third"
-                app:contentPadding="15dp">
+                app:contentPadding="15dp"
+                app:rippleColor="@color/fourth">
 
                 <TextView
                     android:id="@+id/sendVerificationButtonText"
@@ -128,14 +130,18 @@
         <Button
             android:id="@+id/login2_loginButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="30dp"
             android:alpha="0.5"
             android:backgroundTint="@color/third"
             android:enabled="false"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:text="로그인"
             android:textColor="@color/black"
-            android:textSize="20sp"
-            app:cornerRadius="10dp" />
+            android:textSize="16sp"
+            app:cornerRadius="10dp"
+            app:rippleColor="@color/fourth" />
+
     </LinearLayout>
 </LinearLayout>
