--- a/app/src/main/res/layout/fragment_sign_up1.xml
+++ b/app/src/main/res/layout/fragment_sign_up1.xml
@@ -119,14 +119,17 @@
     <Button
         android:id="@+id/signup1_agree_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="25dp"
         android:alpha="0.5"
         android:backgroundTint="@color/third"
         android:enabled="false"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:text="동의하기"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:cornerRadius="10dp" />
+        app:cornerRadius="10dp"
+        app:rippleColor="@color/fourth" />
 
 </LinearLayout>
