--- a/app/src/main/res/layout/fragment_sign_up2.xml
+++ b/app/src/main/res/layout/fragment_sign_up2.xml
@@ -111,13 +111,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="#F5F5F5"
-        app:contentPadding="15dp">
+        app:contentPadding="15dp"
+        app:rippleColor="@color/fourth">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="30dp">
+            android:layout_marginHorizontal="30dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/signup2_year"
@@ -172,14 +173,17 @@
     <Button
         android:id="@+id/signup2_agree_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="25dp"
         android:alpha="0.5"
         android:backgroundTint="@color/third"
         android:enabled="false"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:text="다음"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:cornerRadius="10dp" />
+        app:cornerRadius="10dp"
+        app:rippleColor="@color/fourth" />
 
 </LinearLayout>
