--- a/app/src/main/res/layout/fragment_sign_up4.xml
+++ b/app/src/main/res/layout/fragment_sign_up4.xml
@@ -52,7 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:cardBackgroundColor="#F5F5F5"
-        app:contentPadding="15dp">
+        app:contentPadding="15dp"
+        app:rippleColor="@color/fourth">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,12 +157,15 @@
     <Button
         android:id="@+id/signup4_agree_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:backgroundTint="@color/third"
         android:enabled="true"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:text="회원가입"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:cornerRadius="10dp" />
+        app:cornerRadius="10dp"
+        app:rippleColor="@color/fifth" />
 
 </LinearLayout>
