--- a/app/src/main/res/layout/fragment_fire_check_self.xml
+++ b/app/src/main/res/layout/fragment_fire_check_self.xml
@@ -164,8 +164,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="100dp"
                     android:layout_marginTop="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="10dp">
 
@@ -174,11 +174,11 @@
                         android:id="@+id/textViewFireExtinguisher"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="10"
                         android:drawableLeft="@drawable/icon_fire_extinguisher"
                         android:fontFamily="@font/notosans_semibold"
                         android:includeFontPadding="false"
                         android:text="소화기"
+                        android:textAlignment="center"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -294,7 +294,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="100dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -305,7 +304,6 @@
                         android:id="@+id/textViewFireWarning"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="10"
                         android:drawableLeft="@drawable/icon_fire_warning"
                         android:fontFamily="@font/notosans_semibold"
                         android:includeFontPadding="false"
@@ -383,7 +381,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="100dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -394,7 +391,6 @@
                         android:id="@+id/textViewRunFacility"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="10"
                         android:drawableLeft="@drawable/icon_run"
                         android:fontFamily="@font/notosans_semibold"
                         android:includeFontPadding="false"
@@ -473,7 +469,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="100dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -484,7 +479,6 @@
                         android:id="@+id/textViewEtcFacility"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="10"
                         android:drawableLeft="@drawable/icon_etc"
                         android:fontFamily="@font/notosans_semibold"
                         android:includeFontPadding="false"
