fix : #64 indicator 수정

--- a/app/src/main/res/layout/activity_detail_facility.xml
+++ b/app/src/main/res/layout/activity_detail_facility.xml
@@ -40,17 +40,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
+        <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/springDotIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dampingRatio="0.5"
-            app:dotsColor="@color/third"
-            app:dotsCornerRadius="10dp"
-            app:dotsSize="10dp"
-            app:dotsSpacing="6dp"
-            app:dotsStrokeWidth="1dp"
-            app:stiffness="300"
+            app:ci_animator="@animator/scale_with_alpha"
+            app:ci_drawable="@drawable/indicator_selected"
+            app:ci_drawable_unselected="@drawable/indicator_unselected"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"/>
 
